# Docu-PDF-TA

./: .gitignore  README.md  main.py  package.json  pyproject.toml
src/core/: asset_factory.py  asset_manager.py
src/geom_utils/: geometry_calculator.py
src/models/: asset_model.py  context_model.py  enums.py  page_model.py  state_models.py
src/pdf/: pdf_service.py
src/render/: template_engine.py
src/store/: local_store.py  redis_store.py
src/streamlit/: app.py  dialogs.py  edit_page.py  processing.py  session_state.py  sidebar.py  state_manager.py
src/streamlit/dynamic/: __init__.py  index.html
src/streamlit/dynamic/home_component/: __init__.py  index.html
src/streamlit/dynamic/homecomponent/: __init__.py
src/streamlit/dynamic/page_list_component/: __init__.py  index.html
src/streamlit/static/css/: main.css
src/streamlit/static/css/components/: document_card.css  document_card.css.map  document_grid.css  document_grid.css.map  footer.css  footer.css.map  header.css  header.css.map  page_list.css  projection.css  projection.css.map  table.css  table.css.map
src/streamlit/static/images/: Test Task Python Fullstack.docx
src/styles/scss/: _components.scss  _utilities.scss  main.scss  variables.scss
src/styles/scss/components/: document_card.scss  document_grid.scss  footer.scss  header.scss  page_list.scss  projection.scss  table.scss
src/svg/: wall_processor.py
src/templates/: base.html  home.html
src/templates/components/: footer.html  header.html  page_list.html  projection.html  spinner.html  table.html
